--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.8.3",
     "sweetalert2": "^11.6.0",
     "vue": "^3.2.13",
+    "vue-loading-spinner": "^1.0.11",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
