--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "sweetalert2": "^11.6.0",
     "vue": "^3.2.13",
+    "vue-chartjs": "^4.1.2",
     "vue-loading-spinner": "^1.0.11",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
